avance de imagen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
     <!-- Estilos Propios -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -53,10 +53,12 @@
     </nav>
 
 
-    <div class="w-100">
-        
-        <img class="w-100" src="/assets/img/bg_hero.png" alt="">
-        <h1 class="textofoto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quasi cumque accusamus hic veritatis beatae tempore, deserunt commodi, ad molestiae quibusdam totam quis voluptatum! Eligendi in aliquam cumque rem impedit!</h1>
+    <div class="padre">
+
+        <img id="content_div_one_photo" class="w-100" src="/assets/img/bg_hero.png" alt="">
+        <h1 class="textofoto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quasi cumque accusamus hic
+            veritatis beatae tempore, deserunt commodi, ad molestiae quibusdam totam quis voluptatum! Eligendi in
+            aliquam cumque rem impedit!</h1>
     </div>
 
     <div class="container m-5">
