--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Oswald:wght@200;400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,300&family=Oswald:wght@200;600;700&display=swap"
         rel="stylesheet">
     <!-- Icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
@@ -24,62 +24,82 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #660066;">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+
         <div class="container">
-            <a class="navbar-brand font-weight-bold" href="#" id="letra_logo">M</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">M</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
 
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Experiencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
                 </ul>
+
             </div>
         </div>
+
     </nav>
 
+    <!-- foto con texto -->
 
-    <div class="padre">
+    <header class="">
+        <div class="position-relative">
+            <img class="w-100 " src="/assets/img/bg_hero.png" alt="">
+            <div class="pb-4 mb-4 position-absolute bottom-0 start-50 translate-middle-x text-center">
+                <h1 id="textoFoto1" class="text-white">Yo soy</h1>
+                <hr id="nvoLine">
+                <h2 id="textoFoto2" class="text-white">Magdalena</h2>
+            </div>
+        </div>
+    </header>
 
-        <img id="content_div_one_photo" class="w-100" src="/assets/img/bg_hero.png" alt="">
-        <h1 class="textofoto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quasi cumque accusamus hic
-            veritatis beatae tempore, deserunt commodi, ad molestiae quibusdam totam quis voluptatum! Eligendi in
-            aliquam cumque rem impedit!</h1>
-    </div>
 
-    <div class="container m-5">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda neque cum eius velit architecto dolorum,
+
+    <!-- cuerpo -->
+
+    <div class="container m-5 d-none d-sm-block" >
+        <p id="texto-cuerpo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda neque cum eius velit architecto dolorum,
             modi ea corporis suscipit aperiam asperiores? Tempore dolores eaque ullam enim dignissimos modi similique
             quos.</p>
         <hr>
-        <div class="row">
+        <div class="row" id="texto-cuerpo-columnas">
+            <div class="col" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
+                ipsum ad quo reiciendis, fugiat omnis temporibus sequi laboriosam, itaque sapiente obcaecati repellat
+                fugit unde facilis vel ab!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
+                ipsum ad quo reiciendis, fugiat omnis temporibus sequi laboriosam, itaque sapiente obcaecati repellat
+                fugit unde facilis vel ab!
+            </div>
             <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
                 ipsum ad quo reiciendis, fugiat omnis temporibus sequi laboriosam, itaque sapiente obcaecati repellat
-                fugit unde facilis vel ab!</div>
-            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
+                fugit unde facilis vel ab!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
                 ipsum ad quo reiciendis, fugiat omnis temporibus sequi laboriosam, itaque sapiente obcaecati repellat
-                fugit unde facilis vel ab!</div>
+                fugit unde facilis vel ab!
+            </div>
         </div>
 
-
+<section id="experiencia">
         <p class="text-center py-5">MI EXPERIENCIA</p>
         <hr>
         <div class="container-fluid">
-            <div class="row">
+            <div id="alex11" class="row">
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-body">
@@ -101,7 +121,7 @@
                     </div>
                 </div>
             </div>
-
+</section>
 
         </div>
 
@@ -199,7 +219,9 @@
 
 
 
-
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -207,10 +229,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- JS propio -->
     <script src="assets/js/scripts.js"></script>
 </body>
