--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Natalia Sepúlveda" />
+    <meta name="author" content="Alex Ramírez" />
     <title>Desafío Portafolio</title>
 
     <!-- Bootstrap CSS  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+ -->
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,300&family=Oswald:wght@200;600;700&display=swap"
         rel="stylesheet">
     <!-- Icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <!-- Estilos Propios -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -73,13 +78,14 @@
 
     <!-- cuerpo -->
 
-    <div class="container m-5 d-none d-sm-block" >
-        <p id="texto-cuerpo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda neque cum eius velit architecto dolorum,
+    <div class="container m-5 d-none d-sm-block">
+        <p id="texto-cuerpo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda neque cum eius velit
+            architecto dolorum,
             modi ea corporis suscipit aperiam asperiores? Tempore dolores eaque ullam enim dignissimos modi similique
             quos.</p>
         <hr>
         <div class="row" id="texto-cuerpo-columnas">
-            <div class="col" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
                 ipsum ad quo reiciendis, fugiat omnis temporibus sequi laboriosam, itaque sapiente obcaecati repellat
                 fugit unde facilis vel ab!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quisquam, saepe similique
@@ -94,127 +100,114 @@
                 fugit unde facilis vel ab!
             </div>
         </div>
-
-<section id="experiencia">
-        <p class="text-center py-5">MI EXPERIENCIA</p>
-        <hr>
-        <div class="container-fluid">
-            <div id="alex11" class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                            </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                            </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-</section>
-
-        </div>
-
-        <div class="container-fluid text-white text-center p-5" style="background-color: #660066;">
-            <hr>
-
-
-            <h1>MIS ULTIMOS TRABAJOS</h1>
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-
-
-
-
-        </div>
-
-
-
-
-
-
-
-
-
     </div>
+
+    <section id="experiencia" class="text-center container py-5">
+        <div>
+            <hr class="bg-primary">
+            <h1 class="fw-bold text-uppercase">mi experiencia</h1>
+            <hr>
+        </div>
+        <div class="row">
+            <article class="col-12 col-sm-6">
+                <i class="fab fa-js fa-10x"></i>
+                <h4 class="fw-bold">stromtropper</h4>
+                <h4 class="fw-lighter">1980-2014</h4>
+            </article>
+
+            <article class="col-12 col-sm-6">
+                <i class="fab fa-python fa-10x"></i>
+                <h4 class="fw-bold">stromtropper</h4>
+                <h4 class="fw-lighter">1980-2014</h4>
+            </article>
+        </div>
+    </section>
+
+    <section id="trabajos" class="mb-2">
+        <div>
+            <h1 class="text-uppercase text-center py-5 text-color-white mt-2">mis últimos trabajos</h1>
+            <hr class="bg-white">
+        </div>
+        <div class="m-5">
+            <div class="row text-dark">
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 my-3">
+                    <div class="card">
+                        <img src="/assets/img/meet_coffee.png" class="card-img-top" alt="">
+                        <div class="card-body text-dark">
+                            <h4 class="card-title mb-3">Meet&Coffee</h4>
+                            <p class="card-text fw-lighter fs-5">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Consequuntur ipsum quo numquam ab illum, qui ut accusantium! Totam quae cum,
+                                soluta at, nemo, possimus quam tenetur rerum quod eaque amet?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<div>
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/dwYR67Cr?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+
+</div>
+
+    </section>
+
+
 
 
 
